# test

./: .gitignore  README.md  calculations.py  flow_functions.py  lookup_table_case1_pvt_version.xlsx  main.py  main_local.py  main_local_Gibbs.py  main_local_new.py  other_functions.py  requirements.txt  test.py
Classes/: Component.py  calc.py  models.py
Classes/EOS/: EOS.py  PREnthalpyCalc.py  RachfordRice.py
Endpoints/: EOSModul.py
Models/: EOSModels.py
Tests/: eos_test.py
analiza/: results1.csv  results2.csv  results3.csv
data/: coolprop_data_with_critical.json  coolprop_fluid_properties_with_units.csv  testData.py  testDataBIC.py
data/excel/: lookup_table_case1.xlsx  lookup_table_case1_pvt_version.xlsx
src/: main.py
src/C++/: CMakeLists.txt  Calculations.cpp  Calculations.h  Component.cpp  Component.h  ComponentData.h  EOSBase.cpp  EOSBase.h  PengRobinson.cpp  PengRobinson.h  RachfordRice.cpp  RachfordRice.h  RachfordRice.sln  RachfordRice.vcxproj  RachfordRice.vcxproj.filters  SolveResult.cpp  SolveResult.h  bindings.cpp  main.cpp  wrapper.cpp  wrapper.h
src/Classes/: LookupTableSingleton.py  UtilClass.py
src/Endpoints/: CompressorModul.py  EOSModul.py  FlowModul.py
src/EnumsClasses/: MethodsAndTypes.py  __init__.py
src/Models/: Component.py  CompressionModel.py  EOSModels.py  Fitting.py  FlowModels.py
tests/: testData.py
tests/local/: 3steps.py  CoolPropTool.py  calculate_steps.py  calculate_steps_old.py  compression_calc_ideal.py  compression_calc_real.py  enthalpy.py  main_flowloop_3steps.py  main_local.py  main_local_Enthalpy  pvt.py  (+5 more)
(+18 files in other folders)
